--- a/fonts.css
+++ b/fonts.css
@@ -1,4 +1,147 @@
 
+html {
+    --mat-select-trigger-text-font: Roboto, sans-serif;
+    --mat-select-trigger-text-line-height: 24px;
+    --mat-select-trigger-text-size: 16px;
+    --mat-select-trigger-text-tracking: 0.03125em;
+    --mat-select-trigger-text-weight: 400
+}
+html {
+    --mdc-dialog-subhead-font: Roboto, sans-serif;
+    --mdc-dialog-subhead-line-height: 32px;
+    --mdc-dialog-subhead-size: 20px;
+    --mdc-dialog-subhead-weight: 500;
+    --mdc-dialog-subhead-tracking: 0.0125em;
+    --mdc-dialog-supporting-text-font: Roboto, sans-serif;
+    --mdc-dialog-supporting-text-line-height: 24px;
+    --mdc-dialog-supporting-text-size: 16px;
+    --mdc-dialog-supporting-text-weight: 400;
+    --mdc-dialog-supporting-text-tracking: 0.03125em
+}
+
+.mat-mdc-standard-chip {
+    --mdc-chip-label-text-font: Roboto, sans-serif;
+    --mdc-chip-label-text-line-height: 20px;
+    --mdc-chip-label-text-size: 14px;
+    --mdc-chip-label-text-tracking: 0.0178571429em;
+    --mdc-chip-label-text-weight: 400
+}
+
+html .mat-mdc-slide-toggle {
+    --mat-switch-label-text-font: Roboto, sans-serif;
+    --mat-switch-label-text-line-height: 20px;
+    --mat-switch-label-text-size: 14px;
+    --mat-switch-label-text-tracking: 0.0178571429em;
+    --mat-switch-label-text-weight: 400
+}
+
+html {
+    --mat-radio-label-text-font: Roboto, sans-serif;
+    --mat-radio-label-text-line-height: 20px;
+    --mat-radio-label-text-size: 14px;
+    --mat-radio-label-text-tracking: 0.0178571429em;
+    --mat-radio-label-text-weight: 400
+}
+
+
+html {
+    --mdc-slider-label-label-text-font: Roboto, sans-serif;
+    --mdc-slider-label-label-text-size: 14px;
+    --mdc-slider-label-label-text-line-height: 22px;
+    --mdc-slider-label-label-text-tracking: 0.0071428571em;
+    --mdc-slider-label-label-text-weight: 500
+}
+
+html {
+    --mat-menu-item-label-text-font: Roboto, sans-serif;
+    --mat-menu-item-label-text-size: 16px;
+    --mat-menu-item-label-text-tracking: 0.03125em;
+    --mat-menu-item-label-text-line-height: 24px;
+    --mat-menu-item-label-text-weight: 400
+}
+
+html {
+    --mdc-list-list-item-label-text-font: Roboto, sans-serif;
+    --mdc-list-list-item-label-text-line-height: 24px;
+    --mdc-list-list-item-label-text-size: 16px;
+    --mdc-list-list-item-label-text-tracking: 0.03125em;
+    --mdc-list-list-item-label-text-weight: 400;
+    --mdc-list-list-item-supporting-text-font: Roboto, sans-serif;
+    --mdc-list-list-item-supporting-text-line-height: 20px;
+    --mdc-list-list-item-supporting-text-size: 14px;
+    --mdc-list-list-item-supporting-text-tracking: 0.0178571429em;
+    --mdc-list-list-item-supporting-text-weight: 400;
+    --mdc-list-list-item-trailing-supporting-text-font: Roboto, sans-serif;
+    --mdc-list-list-item-trailing-supporting-text-line-height: 20px;
+    --mdc-list-list-item-trailing-supporting-text-size: 12px;
+    --mdc-list-list-item-trailing-supporting-text-tracking: 0.0333333333em;
+    --mdc-list-list-item-trailing-supporting-text-weight: 400
+}
+
+.mdc-list-group__subheader {
+    font: 400 16px/28px Roboto, sans-serif;
+    letter-spacing: .009375em
+}
+
+html {
+    --mat-paginator-container-text-font: Roboto, sans-serif;
+    --mat-paginator-container-text-line-height: 20px;
+    --mat-paginator-container-text-size: 12px;
+    --mat-paginator-container-text-tracking: 0.0333333333em;
+    --mat-paginator-container-text-weight: 400;
+    --mat-paginator-select-trigger-text-size: 12px
+}
+
+.mat-mdc-tab-header {
+    --mat-tab-header-label-text-font: Roboto, sans-serif;
+    --mat-tab-header-label-text-size: 14px;
+    --mat-tab-header-label-text-tracking: 0.0892857143em;
+    --mat-tab-header-label-text-line-height: 36px;
+    --mat-tab-header-label-text-weight: 500
+}
+
+html {
+    --mat-checkbox-label-text-font: Roboto, sans-serif;
+    --mat-checkbox-label-text-line-height: 20px;
+    --mat-checkbox-label-text-size: 14px;
+    --mat-checkbox-label-text-tracking: 0.0178571429em;
+    --mat-checkbox-label-text-weight: 400
+}
+
+
+html {
+    --mdc-text-button-label-text-font: Roboto, sans-serif;
+    --mdc-text-button-label-text-size: 14px;
+    --mdc-text-button-label-text-tracking: 0.0892857143em;
+    --mdc-text-button-label-text-weight: 500;
+    --mdc-text-button-label-text-transform: none
+}
+
+html {
+    --mdc-filled-button-label-text-font: Roboto, sans-serif;
+    --mdc-filled-button-label-text-size: 14px;
+    --mdc-filled-button-label-text-tracking: 0.0892857143em;
+    --mdc-filled-button-label-text-weight: 500;
+    --mdc-filled-button-label-text-transform: none
+}
+
+html {
+    --mdc-protected-button-label-text-font: Roboto, sans-serif;
+    --mdc-protected-button-label-text-size: 14px;
+    --mdc-protected-button-label-text-tracking: 0.0892857143em;
+    --mdc-protected-button-label-text-weight: 500;
+    --mdc-protected-button-label-text-transform: none
+}
+
+html {
+    --mdc-outlined-button-label-text-font: Roboto, sans-serif;
+    --mdc-outlined-button-label-text-size: 14px;
+    --mdc-outlined-button-label-text-tracking: 0.0892857143em;
+    --mdc-outlined-button-label-text-weight: 500;
+    --mdc-outlined-button-label-text-transform: none
+}
+
+
 
 
 html {
