--- a/fonts.css
+++ b/fonts.css
@@ -1,5 +1,55 @@
 
 html {
+    --mat-card-title-text-font: Roboto, sans-serif;
+    --mat-card-title-text-line-height: 32px;
+    --mat-card-title-text-size: 20px;
+    --mat-card-title-text-tracking: 0.0125em;
+    --mat-card-title-text-weight: 500;
+    --mat-card-subtitle-text-font: Roboto, sans-serif;
+    --mat-card-subtitle-text-line-height: 22px;
+    --mat-card-subtitle-text-size: 14px;
+    --mat-card-subtitle-text-tracking: 0.0071428571em;
+    --mat-card-subtitle-text-weight: 500
+}
+
+html {
+    --mdc-plain-tooltip-supporting-text-font: Roboto, sans-serif;
+    --mdc-plain-tooltip-supporting-text-size: 12px;
+    --mdc-plain-tooltip-supporting-text-weight: 400;
+    --mdc-plain-tooltip-supporting-text-tracking: 0.0333333333em
+}
+
+html {
+    --mdc-filled-text-field-label-text-font: Roboto, sans-serif;
+    --mdc-filled-text-field-label-text-size: 16px;
+    --mdc-filled-text-field-label-text-tracking: 0.03125em;
+    --mdc-filled-text-field-label-text-weight: 400
+}
+
+html {
+    --mdc-outlined-text-field-label-text-font: Roboto, sans-serif;
+    --mdc-outlined-text-field-label-text-size: 16px;
+    --mdc-outlined-text-field-label-text-tracking: 0.03125em;
+    --mdc-outlined-text-field-label-text-weight: 400
+}
+
+html {
+    --mat-form-field-container-text-font: Roboto, sans-serif;
+    --mat-form-field-container-text-line-height: 24px;
+    --mat-form-field-container-text-size: 16px;
+    --mat-form-field-container-text-tracking: 0.03125em;
+    --mat-form-field-container-text-weight: 400;
+    --mat-form-field-outlined-label-text-populated-size: 16px;
+    --mat-form-field-subscript-text-font: Roboto, sans-serif;
+    --mat-form-field-subscript-text-line-height: 20px;
+    --mat-form-field-subscript-text-size: 12px;
+    --mat-form-field-subscript-text-tracking: 0.0333333333em;
+    --mat-form-field-subscript-text-weight: 400
+}
+
+
+
+html {
     --mat-select-trigger-text-font: Roboto, sans-serif;
     --mat-select-trigger-text-line-height: 24px;
     --mat-select-trigger-text-size: 16px;
